--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto" src="img/pantallas.png" alt="">
+        <img class="img-fluid mb-5 d-block mx-auto" src="img/mesadetrabajo1.png alt="">
       
         <h1 class="text-uppercase mb-0">DISEÑO WEB PROFESIONAL</h1>
        
