fondos-redes-diseño

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto" src="img/diseño-pantallas-final.gif" alt="">
+        <img class="img-fluid mb-5 d-block mx-auto" src="img/diseño-pantallas-5.gif" alt="">
       
         <h1 class="text-uppercase mb-0">DISEÑO WEB PROFESIONAL</h1>
        
@@ -95,20 +95,27 @@
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fas fa-search-plus fa-3x"></i>
+                  <i class="fab fa-fw fa-facebook-f"></i>
+                  <i class="fab fa-fw fa-twitter"></i>
+                  <i class="fab fa-fw fa-instagram"></i>
+                  <i class="fab fa-fw fa-google"></i>
+                  <i class="fab fa-fw fa-youtube"></i>
+                  <i class="fab fa-fw fa-snapchat"></i>
+                  <h3>REDES SOCIALES</h3>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+              <img class="img-fluid" src="img/fondo-redes-final.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fas fa-search-plus fa-3x"></i>
+                  <i class="fas fa-edit fa-2x"></i>
+                  <h4>DISEÑO PERSONALIZADO</h4>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/game.png" alt="">
+              <img class="img-fluid" src="img/fondo-diseño-final.jpg" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
