--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="container">
         <img class="img-fluid mb-5 d-block mx-auto" src="img/diseño-pantallas-5.gif" alt="">
       
-        <h1 class="text-uppercase mb-0">DISEÑO WEB PROFESIONAL</h1>
+        <h1 class="text-uppercase mb-0">DISEÑO WEB</h1>
        
         <h2 class="font-weight-light mb-0">Diseño web - Arte audiovisual - Redes Sociales - Edicion de video y fotografia</h2>
       </div>
